Print Preview: Fix handling of printers without capabilities.

BUG=666672
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2509983006
Cr-Commit-Position: refs/heads/master@{#433263}

Former-commit-id: 92a1b39f7a3fc31aedcf3ebfc50a297b95882bae